Fixes icon size getting too large

--- a/_includes/beatrice/02-molecules/10-hero-animation/_hero.scss
+++ b/_includes/beatrice/02-molecules/10-hero-animation/_hero.scss
@@ -56,11 +56,12 @@
   display: none;
   visibility: hidden;
   @media (min-width: $bp--medium) {
+    width: 80%;
+    max-width: 200px;
     display: block;
     visibility: visible;
     padding-left: 2rem;
     padding-right: 2rem;
-    max-width: 80%;
     margin-left: auto;
     margin-right: auto;
     margin-top: -2rem;
